--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@osnova/module-federation",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Module Federation standard utilities and interfaces",
   "author": "Alexander Snov",
   "license": "MIT",
@@ -63,7 +63,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@osnova/events": "^0.19.0"
+    "@osnova/events": "0.20.0"
   },
   "peerDependencies": {
     "react": "^17.0.2"
