Add support for loading arbitrary remote code
* refactor code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/RemoteComponent.tsx",
-    "src/RemoteModule.tsx"
+    "src/components/RemoteComponent.tsx",
+    "src/components/RemoteModule.tsx"
   ],
   "exclude": [
     "node_modules",
