--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@osnova/module-federation",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "Module Federation standard utilities and interfaces",
   "author": "Alexander Snov",
   "license": "MIT",
@@ -44,7 +44,7 @@
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^16.9.1",
-    "@types/react": "^17.0.20",
+    "@types/react": "^18.0.15",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "babel-jest": "^26.6.3",
@@ -56,7 +56,7 @@
     "lint-staged": "^10.5.4",
     "pinst": "^2.1.4",
     "prettier": "^2.2.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.39.0",
     "tslib": "^2.1.0",
@@ -66,6 +66,6 @@
     "@osnova/events": "0.20.0"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^17.0.2 || ^18.2.0"
   }
 }
